# RaytracerNGL

./: .gitignore  CMakeLists.txt  ClassRepresentation.md  Plan.md  README.md
include/: Image.h  Material.h  NGLScene.h  RGBA.h  Ray.h  camera.h  hittable.h  hittable_list.h  interval.h  rtweekend.h  triangle.h
src/: Image.cpp  NGLScene.cpp  NGLSceneMouseControls.cpp  main.cpp
tests/: ImageTests.cpp  RGBATests.cpp
